# COSY-Lab-IoT-Box

./: LICENSE  README.md  quellen.txt
Data/: airout_07.02.2018.csv  airout_08.02.2018.csv  airout_09.02.2018.csv  combinedData.csv  combinedData_09.02.2018.csv  envout_07.02.2018.csv  envout_08.02.2018.csv  envout_09.02.2018.csv  lightout_07.02.2018.csv  lightout_08.02.2018.csv  lightout_09.02.2018.csv  out_07.02.2018.json  out_09.02.2018 - Kopie.json  out_09.02.2018.json
DesignDoc/: Class_Diagram.xml  Class_Diagram_Cropped.xml  Deployment_diagram.xml  DesignDoc.docx  SD_ReadSensorData.xml  Use Case Diagram.xml  Use_Case_Diagram.xml  Use_Case_Specification.tex
DesignDoc/SequenceDiagrams/: SD_DataVisualization.xml  SD_DeleteExperiment.xml  SD_ReadSensorData.xml  SD_RegisterExperiment.xml  SD_UpdateCollectSensorData.xml
Homepage/: index.html  visualization.html
Homepage/css/: main.css
Homepage/img/: logo.psd
Homepage/js/: dataServices.js  script.js
Seattle/: Peter0014.privatekey  Peter0014.publickey  rebuild_base_installers.sh
Seattle/local/: settings.py
Seattle/scripts/: config_initialize.txt
Thesis/Latex/: BSc_Latex_Template.tex  acronyms.tex  longer-thesis-chapters.acn  longer-thesis-chapters.acr  longer-thesis-chapters.alg  longer-thesis-chapters.aux  longer-thesis-chapters.bbl  longer-thesis-chapters.bcf  longer-thesis-chapters.blg  (+12 more)
src/: BME280_TempSensor.c  BME280_TempSensor.h  CCS811_AirQuality_Wrapper.c  CMakeLists.txt  SI1145_LightSensor.c  SI1145_LightSensor.h  get_air.r2py  get_light.r2py  get_temperature.r2py  save_sensor_data.r2py
(+3 files in other folders)
